--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 glow = "0.13"
+cfg-if = "1"
+log = "0.4"
 
 [target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
 glutin = { version = "0.31", optional = true }
@@ -12,11 +14,13 @@ glutin-winit = { version = "0.4", optional = true }
 winit = { version = "0.29", features = ["rwh_05"], optional = true }
 raw-window-handle = { version = "0.5", optional = true }
 sdl2 = { version = "0.36", features = ["bundled"], optional = true }
+env_logger = { version = "0.11" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features = ["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
 wasm-bindgen = { version = "0.2" }
+console_error_panic_hook = "0.1.7"
+console_log = "1.0"
 
 [features]
-default = ["glutin_winit"]
 glutin_winit = ["glutin", "glutin-winit", "winit", "raw-window-handle"]
