--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 glow = "0.13"
 cfg-if = "1"
 log = "0.4"
+typed-builder = "0.18"
+bytemuck = { version = "1.15", features = ["derive"] }
 
 [target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
 glutin = { version = "0.31", optional = true }
