feat: submit shaders uniform

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ cfg-if = "1"
 log = "0.4"
 typed-builder = "0.18"
 bytemuck = { version = "1.15", features = ["derive"] }
+chrono = "0.4"
 
 [target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
 glutin = { version = "0.31", optional = true }
