--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ log = "0.4"
 typed-builder = "0.18"
 bytemuck = { version = "1.15", features = ["derive"] }
 chrono = "0.4"
+image = "0.25"
 
 [target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
 glutin = { version = "0.31", optional = true }
