--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
+name = "lib_learn_opengl_rs"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
@@ -17,17 +18,14 @@ image = "0.25"
 nalgebra-glm = "0.18"
 
 [target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
-glutin = { version = "0.31", optional = true }
-glutin-winit = { version = "0.4", optional = true }
-winit = { version = "0.29", features = ["rwh_05"], optional = true }
-raw-window-handle = { version = "0.5", optional = true }
-env_logger = { version = "0.11" }
+glutin = "0.31"
+glutin-winit = "0.4"
+winit = { version = "0.29", features = ["rwh_05"] }
+raw-window-handle = "0.5"
+env_logger = "0.11"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features = ["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
-wasm-bindgen = { version = "0.2" }
+wasm-bindgen = "0.2"
 console_error_panic_hook = "0.1.7"
 console_log = "1.0"
-
-[features]
-glutin_winit = ["glutin", "glutin-winit", "winit", "raw-window-handle"]
