--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ nalgebra-glm = "0.18"
 winit = { version = "0.29", features = ["rwh_05"] }
 winit_input_helper = "0.16"
 game-loop = { version = "1.1", features = ["winit"] }
+anyhow = "1"
 
 [target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
 glutin = "0.31"
