--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,13 @@ typed-builder = "0.18"
 bytemuck = { version = "1.15", features = ["derive"] }
 chrono = "0.4"
 image = "0.25"
-nalgebra-glm = "0.18"
+nalgebra-glm = { version = "0.18", features = ["convert-bytemuck"] }
 winit = { version = "0.29", features = ["rwh_05"] }
 winit_input_helper = "0.16"
 game-loop = { version = "1.1", features = ["winit"] }
 anyhow = "1"
+tobj = "4"
+russimp = "3.2"
 
 [target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
 glutin = "0.31"
