--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,6 @@ anyhow = "1"
 tobj = { version = "4", features = [
     "async",
 ] }
-egui = { version = "0.26", features = ["default_fonts"] }
 
 [target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
 # OpenGL context
@@ -40,7 +39,8 @@ raw-window-handle = "0.5"
 env_logger = "0.11"
 # block on async
 pollster = "0.3"
-egui_glow = { version = "0.26", features = ["winit"] }
+egui = { version = "0.26", features = ["default_fonts"], optional = true }
+egui_glow = { version = "0.26", features = ["winit"], optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.2", features = ["js"] }
@@ -59,3 +59,8 @@ glob = "0.3"
 
 [profile.release]
 lto = "fat"
+
+[features]
+default = []
+egui-support = ["egui", "egui_glow"]
+
