--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ env_logger = "0.11"
 pollster = "0.3"
 egui = { version = "0.26", features = ["default_fonts"], optional = true }
 egui_glow = { version = "0.26", features = ["winit"], optional = true }
+easy-imgui-window = { path = "F:/SourceCodes/Github/easy-imgui-rs/easy-imgui-window" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.2", features = ["js"] }
