Prototype to use easy-imgui-window.
New type `EasyImGuiFacade`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ env_logger = "0.11"
 pollster = "0.3"
 egui = { version = "0.27", features = ["default_fonts"], optional = true }
 egui_glow = { version = "0.27", features = ["winit"], optional = true }
+easy-imgui-window = { version = "*", git = "https://github.com/rodrigorc/easy-imgui-rs", rev = "53da96a99e3829d77fa23c34b8a864cf859dedf1", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.2", features = ["js"] }
@@ -64,4 +65,5 @@ lto = "fat"
 [features]
 default = []
 egui-support = ["egui", "egui_glow"]
+imgui-support = ["dep:easy-imgui-window"]
 
